Fix HTTPS issue

--- a/index.html
+++ b/index.html
@@ -11,7 +11,8 @@
 <body>
   <h1 class="text-center">Free Code Camp Zipline</h1>
   <h2 class="text-center">Local Weather App</h2>
-  <h3 id="temperature" class="text-center"><img id="weather-icon" class="img" /></h3>
+  <canvas id="weather-icon" width="128" height="128" class="center-block"></canvas>
+  <h3 id="temperature" class="text-center"></h3>
 
   <div class="container">
     <div class="row">
@@ -29,6 +30,7 @@
 
   <p id="position"><p>
   <script src="https://code.jquery.com/jquery-3.1.0.js" integrity="sha256-slogkvB1K3VOkzAI8QITxV3VzpOnkeNVsKvtkYLMjfk=" crossorigin="anonymous"></script>
+  <script type="text/javascript" src="skycons.js"></script>
   <script type="text/javascript" src="weather.js"></script>
 </body>
 </html>
